--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,15 +13,8 @@
     margin-right: 5%;
 }
 
-.headerLeftButton {
+.headerButton {
     margin-right: 8px;
-    width: 48px;
-    height: 48px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-}
-.headerRightButton {
     width: 48px;
     height: 48px;
     border: none;
