--- a/src/components/SecondHalf.css
+++ b/src/components/SecondHalf.css
@@ -72,7 +72,7 @@
 }
 
 .fifthSlideImg {
-    margin-top: 30px;
+    margin-top: 28px;
 }
 
 .toggleFirstPic {
@@ -117,9 +117,10 @@
     background-color: #FFFFFF;
     height: 240px;
     border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.seventhText {
     text-align: start;
 }
-
 .seventhSlideTopic{
     margin-top: 20px;
     margin-bottom: 0px;
