--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -1,15 +1,14 @@
 .categoriesMain {
     justify-content: center;
     align-items: center;
-    padding: 8px;
+    padding: 5px;
 }
 .categoriesRow {
     display: flex;
     flex-direction: row;
-    width: 800px;
+    width: 900px;
     height: 40px;
     margin-bottom: 8px;
-    overflow-x: auto;
 }
 .categoriesRow::-webkit-scrollbar {
     width: 0;
@@ -26,12 +25,17 @@
     min-width: 106px;
     max-height: 40px;
     margin-right: 8px;
-    padding: 8px;
     align-items: center;
     justify-content: space-between;
+    border: 2px solid white;
 }
 
 .categoriesText {
     font-size: 14px;
     padding: 16px;
+}
+
+.choosen {
+    border: 1px solid #0066FF;
+    background: #E6E9F5;
 }
