--- a/src/components/FirstHalf.css
+++ b/src/components/FirstHalf.css
@@ -116,8 +116,13 @@
     margin: 0px;
 }
 
-.fourthSlide {
+.fourthCategories {
     width: 350px;
     overflow-x: auto;
-
+    margin-bottom: -15px;
+}
+.fourthBooks {
+    margin-left: -20px;
+    margin-top: 8px;
+    margin-bottom: -15px;
 }
